fix: remove extra space at bottom of output box

--- a/assets/css/src/parts/ilm-guide.scss
+++ b/assets/css/src/parts/ilm-guide.scss
@@ -243,7 +243,7 @@
 			border-style: solid;
 			border-radius: 1em;
 			border-color: v.$gray;
-			padding: 2em 1.5em;
+			padding: 2em 1.5em 0;
 			display: grid;
 			grid-template-rows: 5em 1fr auto;
 
